------------------------------------------------------------------------
r73 | trevor | 2009-04-06 15:19:34 -0700 (Mon, 06 Apr 2009) | 1 line

updating revision
------------------------------------------------------------------------
r72 | trevor | 2009-04-06 15:15:50 -0700 (Mon, 06 Apr 2009) | 1 line

New version of heatmpa
------------------------------------------------------------------------
r70 | trevor | 2009-02-27 09:20:35 -0800 (Fri, 27 Feb 2009) | 1 line

Adding cleanup mechanizm for stray child files
------------------------------------------------------------------------
r68 | trevor | 2009-02-27 08:51:23 -0800 (Fri, 27 Feb 2009) | 1 line

Removing some unneeded IP
------------------------------------------------------------------------
r66 | trevor | 2009-02-27 07:41:25 -0800 (Fri, 27 Feb 2009) | 1 line

Upgrading version number
------------------------------------------------------------------------
r64 | trevor | 2009-02-27 07:31:07 -0800 (Fri, 27 Feb 2009) | 1 line

Updating revision number to have a 3 char, zero-padded minor version
------------------------------------------------------------------------
r62 | trevor | 2009-02-27 07:28:50 -0800 (Fri, 27 Feb 2009) | 1 line

Removing the dependancy on an INIT block
------------------------------------------------------------------------
r51 | trevor | 2009-02-14 23:04:06 -0800 (Sat, 14 Feb 2009) | 1 line

Adding useful POD
------------------------------------------------------------------------
r49 | trevor | 2009-02-13 23:45:07 -0800 (Fri, 13 Feb 2009) | 1 line

Adding make files, unit tests and documentation; bug fixes
------------------------------------------------------------------------
r48 | trevor | 2009-02-06 11:39:09 -0800 (Fri, 06 Feb 2009) | 1 line

Inital revision number added to repository at 0.001000
------------------------------------------------------------------------
r47 | trevor | 2009-02-06 11:38:33 -0800 (Fri, 06 Feb 2009) | 1 line

Adding revision number