@@ -1,4 +1,12 @@
 ------------------------------------------------------------------------
+r104 | trevor | 2009-07-21 11:01:08 -0700 (Tue, 21 Jul 2009) | 1 line
+
+Updated without a dependancy on a statement handle
+------------------------------------------------------------------------
+r103 | trevor | 2009-07-17 10:39:28 -0700 (Fri, 17 Jul 2009) | 1 line
+
+Updating transparency bug
+------------------------------------------------------------------------
 r73 | trevor | 2009-04-06 15:19:34 -0700 (Mon, 06 Apr 2009) | 1 line
 
 updating revision
